--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.0",
     "sharp": "^0.34.0"
   }
 }
